--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "data-fns": "^1.1.0",
+    "date-fns": "^3.2.0",
     "lucide-react": "^0.297.0",
     "next": "14.0.4",
     "next-cloudinary": "^5.18.0",
