--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
     "lucide-react": "^0.297.0",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "next-cloudinary": "^5.18.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.12.7",
+    "stripe": "^15.8.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
